test/invalid/baseline/raises.txt
Syntax error at line 5 in raises.webidl, since `interface Person`:
  attribute DOMString name setraises (InvalidName);
                           ^ Unterminated attribute, expected `;`
